--- a/tailwind.css
+++ b/tailwind.css
@@ -3,8 +3,13 @@
 @tailwind components;
 
 @layer utilities {
+    html {
+        font-size: 16px;
+    }
+
     .btn {
-        @apply bg-primary border-2 border-primary uppercase py-2 px-4 rounded-sm active:scale-95 hover:scale-105 hover:bg-primary/75;
+        @apply bg-primary border-2 border-primary uppercase py-2 px-4 rounded-sm active:scale-95 
+        hover:scale-105 hover:bg-primary/75;
     }
     
     .btn.active {
@@ -19,25 +24,33 @@
         @apply w-full grid grid-cols-[90px_1fr_20px] gap-5 items-center;
     }
 
-    .menubox {
-        @apply w-full aspect-[1] pt-4 pb-2 grid px-10 bg-white rounded-lg;
+    .box-container {
+        @apply px-4 sm:px-10 md:px-16 lg:px-20 xl:px-28 2xl:px-36 grid sm:grid-cols-2 
+        lg:grid-cols-3 2xl:grid-cols-4 gap-x-20 gap-y-16;
     }
 
-    .extra-info {
-        max-height: 0;
-        height: auto;
-        overflow: hidden;
-        padding-block: 0;
-        transition: all 500ms linear;
+    .menubox {
+        @apply w-full aspect-[1] pt-4 pb-2 grid px-10 bg-white rounded-lg relative z-[1];
+    }
+
+    .menubox img {
+        @apply absolute left-10 z-[2] transition-all duration-300 ease-linear;
+    }
+
+    .menubox .dummy {
+        @apply aspect-square transition-all duration-300 ease-linear;
+    }
+
+    .extra-info-container {
+        @apply h-auto max-h-0 overflow-hidden transition-all duration-300 ease-linear;
     }
 
     .menubox:hover img {
         animation: rotate 3s linear infinite;
     }
 
-    .menubox:hover .extra-info {
-        max-height: unset;
-        padding-block: 8px;
+    .menubox:hover .extra-info-container {
+        @apply max-h-none;
     }
 
     @keyframes rotate {
