--- a/tailwind.css
+++ b/tailwind.css
@@ -7,9 +7,36 @@
         font-size: 16px;
     }
 
+    
     .btn {
         @apply bg-primary border-2 border-primary uppercase py-2 px-4 rounded-sm active:scale-95 
         hover:scale-105 hover:bg-primary/75;
+    }
+    
+    .sort-btn {
+        @apply py-3 px-2 w-[200px] flex justify-center rounded-full;
+    }
+
+    .btn-text {
+        @apply relative text-sm font-semibold;
+    }
+
+    .btn-text[data-sort=up]::after {
+        content: url('./assets/arrow.svg');
+        height: 20px;
+        position: absolute;
+        top: 50%;
+        right: -20px;
+        transform: translateY(-50%);
+    }
+
+    .btn-text[data-sort=down]::after {
+        content: url('./assets/arrow.svg');
+        height: 20px;
+        position: absolute;
+        top: 50%;
+        right: -20px;
+        transform: translateY(-50%) rotate(180deg);
     }
     
     .btn.active {
@@ -24,6 +51,13 @@
         @apply w-full grid grid-cols-[90px_1fr_20px] gap-5 items-center;
     }
 
+    
+    
+    
+    
+    
+    
+    /* BURGER STORE */
     .box-container {
         @apply px-4 sm:px-10 md:px-16 lg:px-20 xl:px-28 2xl:px-36 grid sm:grid-cols-2 
         lg:grid-cols-3 2xl:grid-cols-4 gap-x-20 gap-y-16;
